--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
         <section class="categories">
             <div class="category-item">
                 <a href="poptarts.html">
-                    <img src="https://i.imgur.com/JXT5Asm.jpeg" alt="Pop-Tarts">
-                    <h2>Pop-Tarts</h2>
+                    <div class="category-card">
+                        <img src="https://i.imgur.com/JXT5Asm.jpeg" alt="Pop-Tarts">
+                        <div class="category-info">
+                            <h2>Pop-Tarts</h2>
+                            <p>Découvrez toutes les saveurs gourmandes !</p>
+                        </div>
+                    </div>
                 </a>
             </div>
             <!-- Ajoutez ici d'autres catégories lorsque disponibles -->
