--- a/poptarts.html
+++ b/poptarts.html
@@ -25,23 +25,94 @@
         <section class="product-list">
             <!-- Mega Pack -->
             <div class="product-item">
-                <img src="https://i.imgur.com/JXT5Asm.jpeg" alt="Mega Pack Pop-Tarts">
-                <h2>Mega Pack Pop-Tarts</h2>
-                <p>Contient : 24 Frosted Strawberry, 12 Frosted Cherry, 12 Frosted Blueberry</p>
-                <p>Prix : $29.99</p>
-                <button class="buy-button" data-snippet-id="mega-pack">Ajouter au panier</button>
+                <div class="product-card">
+                    <img src="https://i.imgur.com/JXT5Asm.jpeg" alt="Mega Pack Pop-Tarts">
+                    <div class="product-info">
+                        <h2>Mega Pack Pop-Tarts</h2>
+                        <p>24 Strawberry, 12 Cherry, 12 Blueberry pour un plaisir prolongé !</p>
+                        <p>Prix : $29.99</p>
+                        <button class="buy-button" data-snippet-id="mega-pack">Ajouter au panier</button>
+                    </div>
+                </div>
             </div>
 
-            <!-- Autres produits Pop-Tarts -->
+            <!-- Frosted Banana Bread -->
             <div class="product-item">
-                <img src="https://i.imgur.com/Ssx1hDP.jpeg" alt="Frosted Banana Bread">
-                <h2>Frosted Banana Bread</h2>
-                <p>Délicieuse saveur de pain à la banane avec glaçage.</p>
-                <p>Prix : $4.99</p>
-                <button class="buy-button" data-snippet-id="banana-bread">Ajouter au panier</button>
+                <div class="product-card">
+                    <img src="https://i.imgur.com/Ssx1hDP.jpeg" alt="Frosted Banana Bread">
+                    <div class="product-info">
+                        <h2>Frosted Banana Bread</h2>
+                        <p>Le goût authentique de la banane, sucré et fondant, parfait pour une pause gourmande !</p>
+                        <p>Prix : $4.99</p>
+                        <button class="buy-button" data-snippet-id="banana-bread">Ajouter au panier</button>
+                    </div>
+                </div>
             </div>
 
-            <!-- Ajoutez ici d'autres produits Pop-Tarts comme décrit précédemment -->
+            <!-- Frosted Brown Sugar Cinnamon -->
+            <div class="product-item">
+                <div class="product-card">
+                    <img src="https://i.imgur.com/unXiIfG.jpeg" alt="Frosted Brown Sugar Cinnamon">
+                    <div class="product-info">
+                        <h2>Frosted Brown Sugar Cinnamon</h2>
+                        <p>Saveur réconfortante de cannelle avec une touche de sucre brun, idéal pour les matinées fraîches !</p>
+                        <p>Prix : $4.99</p>
+                        <button class="buy-button" data-snippet-id="brown-sugar">Ajouter au panier</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Frosted Boston Creme Donut -->
+            <div class="product-item">
+                <div class="product-card">
+                    <img src="https://i.imgur.com/5XFiGvk.jpeg" alt="Frosted Boston Creme Donut">
+                    <div class="product-info">
+                        <h2>Frosted Boston Creme Donut</h2>
+                        <p>Le classique beignet Boston Crème transformé en Pop-Tart : crémeux et décadent !</p>
+                        <p>Prix : $5.49</p>
+                        <button class="buy-button" data-snippet-id="boston-creme">Ajouter au panier</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Frosted Strawberry Milkshake -->
+            <div class="product-item">
+                <div class="product-card">
+                    <img src="https://i.imgur.com/UXNbxyI.jpeg" alt="Frosted Strawberry Milkshake">
+                    <div class="product-info">
+                        <h2>Frosted Strawberry Milkshake</h2>
+                        <p>Le goût crémeux et sucré d'un milkshake à la fraise, avec un glaçage doux irrésistible !</p>
+                        <p>Prix : $4.99</p>
+                        <button class="buy-button" data-snippet-id="strawberry-milkshake">Ajouter au panier</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Frosted Strawberry -->
+            <div class="product-item">
+                <div class="product-card">
+                    <img src="https://i.imgur.com/Ndp2Qv.jpeg" alt="Frosted Strawberry">
+                    <div class="product-info">
+                        <h2>Frosted Strawberry</h2>
+                        <p>La saveur classique à la fraise avec glaçage : sucrée, fruitée, et toujours délicieuse.</p>
+                        <p>Prix : $3.99</p>
+                        <button class="buy-button" data-snippet-id="strawberry">Ajouter au panier</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Frosted Cookie and Creme -->
+            <div class="product-item">
+                <div class="product-card">
+                    <img src="https://i.imgur.com/BX3Sxa0.jpeg" alt="Frosted Cookie and Creme">
+                    <div class="product-info">
+                        <h2>Frosted Cookie and Creme</h2>
+                        <p>Un mélange gourmand de cookie et crème, pour ceux qui aiment l'irrésistible duo chocolat-vanille !</p>
+                        <p>Prix : $5.99</p>
+                        <button class="buy-button" data-snippet-id="cookie-creme">Ajouter au panier</button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
