--- a/poptarts.html
+++ b/poptarts.html
@@ -91,7 +91,7 @@
             <!-- Frosted Strawberry -->
             <div class="product-item">
                 <div class="product-card">
-                    <img src="https://i.imgur.com/Ndp2Qv.jpeg" alt="Frosted Strawberry">
+                    <img src="https://i.imgur.com/pNPtOji.jpeg" alt="Frosted Strawberry">
                     <div class="product-info">
                         <h2>Frosted Strawberry</h2>
                         <p>La saveur classique à la fraise avec glaçage : sucrée, fruitée, et toujours délicieuse.</p>
