--- a/poptarts.html
+++ b/poptarts.html
@@ -30,8 +30,8 @@
                     <div class="product-info">
                         <h2>Mega Pack Pop-Tarts</h2>
                         <p>24 Strawberry, 12 Cherry, 12 Blueberry pour un plaisir prolongé !</p>
-                        <p>Prix : $29.99</p>
-                        <button class="buy-button" data-snippet-id="mega-pack">Ajouter au panier</button>
+                        <p class="price">Prix : $29.99</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -43,8 +43,8 @@
                     <div class="product-info">
                         <h2>Frosted Banana Bread</h2>
                         <p>Le goût authentique de la banane, sucré et fondant, parfait pour une pause gourmande !</p>
-                        <p>Prix : $4.99</p>
-                        <button class="buy-button" data-snippet-id="banana-bread">Ajouter au panier</button>
+                        <p class="price">Prix : $4.99</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -56,8 +56,8 @@
                     <div class="product-info">
                         <h2>Frosted Brown Sugar Cinnamon</h2>
                         <p>Saveur réconfortante de cannelle avec une touche de sucre brun, idéal pour les matinées fraîches !</p>
-                        <p>Prix : $4.99</p>
-                        <button class="buy-button" data-snippet-id="brown-sugar">Ajouter au panier</button>
+                        <p class="price">Prix : $4.99</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -69,8 +69,8 @@
                     <div class="product-info">
                         <h2>Frosted Boston Creme Donut</h2>
                         <p>Le classique beignet Boston Crème transformé en Pop-Tart : crémeux et décadent !</p>
-                        <p>Prix : $5.49</p>
-                        <button class="buy-button" data-snippet-id="boston-creme">Ajouter au panier</button>
+                        <p class="price">Prix : $5.49</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -82,8 +82,8 @@
                     <div class="product-info">
                         <h2>Frosted Strawberry Milkshake</h2>
                         <p>Le goût crémeux et sucré d'un milkshake à la fraise, avec un glaçage doux irrésistible !</p>
-                        <p>Prix : $4.99</p>
-                        <button class="buy-button" data-snippet-id="strawberry-milkshake">Ajouter au panier</button>
+                        <p class="price">Prix : $4.99</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -91,12 +91,12 @@
             <!-- Frosted Strawberry -->
             <div class="product-item">
                 <div class="product-card">
-                    <img src="https://i.imgur.com/pNPtOji.jpeg" alt="Frosted Strawberry">
+                    <img src="https://i.imgur.com/Ndp2Qv.jpeg" alt="Frosted Strawberry">
                     <div class="product-info">
                         <h2>Frosted Strawberry</h2>
                         <p>La saveur classique à la fraise avec glaçage : sucrée, fruitée, et toujours délicieuse.</p>
-                        <p>Prix : $3.99</p>
-                        <button class="buy-button" data-snippet-id="strawberry">Ajouter au panier</button>
+                        <p class="price">Prix : $3.99</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -108,8 +108,8 @@
                     <div class="product-info">
                         <h2>Frosted Cookie and Creme</h2>
                         <p>Un mélange gourmand de cookie et crème, pour ceux qui aiment l'irrésistible duo chocolat-vanille !</p>
-                        <p>Prix : $5.99</p>
-                        <button class="buy-button" data-snippet-id="cookie-creme">Ajouter au panier</button>
+                        <p class="price">Prix : $5.99</p>
+                        <button class="buy-button">Voir les détails</button>
                     </div>
                 </div>
             </div>
@@ -119,10 +119,6 @@
     <footer>
         <p>&copy; 2024 Boutique en Ligne. Tous droits réservés.</p>
     </footer>
-
-    <!-- Snipcart integration script -->
-    <script src="https://cdn.snipcart.com/themes/v3.0.31/default/snipcart.js"></script>
-    <div hidden id="snipcart" data-api-key="VOTRE_CLE_API_SNIPCART"></div>
 </body>
 
 </html>
