--- a/poptarts.html
+++ b/poptarts.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <!-- Frosted Strawberry (mise à jour) -->
+            <!-- Frosted Strawberry -->
             <div class="product-item">
                 <div class="product-card">
                     <img src="https://i.imgur.com/pNPtOji.jpeg" alt="Frosted Strawberry">
