--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boutique en Ligne - Accueil</title>
+    <title>Mario Shop - Boutique en Ligne</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Bienvenue à notre Boutique en Ligne !</h1>
+    <header class="header-3d">
+        <div class="header-content">
+            <img src="https://i.imgur.com/Fhqyl5R.jpeg" alt="Mario Shop" class="header-image">
+            <h1 class="header-title">Bienvenue chez Mario Shop !</h1>
+        </div>
     </header>
 
     <nav>
@@ -29,7 +32,7 @@
                         <img src="https://i.imgur.com/JXT5Asm.jpeg" alt="Pop-Tarts">
                         <div class="category-info">
                             <h2>Pop-Tarts</h2>
-                            <p>Découvrez toutes les saveurs gourmandes !</p>
+                            <p>Découvrez toutes nos saveurs gourmandes !</p>
                         </div>
                     </div>
                 </a>
@@ -39,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Boutique en Ligne. Tous droits réservés.</p>
+        <p>&copy; 2024 Mario Shop. Tous droits réservés.</p>
     </footer>
 </body>
 
